# GeoScavanger

.claude/: settings.local.json
server/: .dockerignore  .env.example  ARCHITECTURE.md  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
server/apps/accounts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
server/apps/accounts/migrations/: 0001_initial.py
server/apps/audio/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
server/apps/audio/management/commands/: import_clips.py
server/apps/audio/migrations/: 0001_initial.py
server/apps/history/: admin.py  models.py  serializers.py  urls.py  views.py
server/apps/history/migrations/: 0001_initial.py
server/config/: asgi.py  urls.py  wsgi.py
server/config/settings/: base.py  local.py  production.py
server/docker/: Dockerfile
server/requirements/: base.txt  local.txt
